WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207936
WebPageProxy::PolicyDecisionSender should send a struct instead of many parameters
https://bugs.webkit.org/show_bug.cgi?id=207936
Summary
WebPageProxy::PolicyDecisionSender should send a struct instead of many param...
Kate Cheney
Reported
2020-02-19 08:05:55 PST
Right now, PolicyDecisionSender sends 5 parameters. This should be refactored into sending a single struct parameter which contains these values.
Attachments
Patch
(31.54 KB, patch)
2020-02-19 08:25 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(31.36 KB, patch)
2020-02-19 12:02 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-19 08:06:17 PST
<
rdar://problem/59590676
>
Kate Cheney
Comment 2
2020-02-19 08:25:10 PST
Created
attachment 391163
[details]
Patch
Alex Christensen
Comment 3
2020-02-19 11:30:04 PST
Comment on
attachment 391163
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391163&action=review
> Source/WebKit/Shared/PolicyDecisionData.h:37 > + uint64_t navigationID;
These should have default initializers so we don't accidentally use uninitialized memory. uint64_t navigationID { 0 }; etc.
Geoffrey Garen
Comment 4
2020-02-19 11:35:22 PST
Comment on
attachment 391163
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391163&action=review
> Source/WebKit/Shared/PolicyDecisionData.h:34 > +struct PolicyDecisionData {
Can we call this struct just "PolicyDecision"? All classes are data, so "Data" doesn't add meaning here. ("Info" is another words folks are often tempted to use, which I recommend against.) I also prefer how "send(PolicyDecision {... })" reads like a complete statement: "I am sending a policy decision."
Kate Cheney
Comment 5
2020-02-19 11:41:44 PST
Yes, I'll change both of these before landing. Thanks!
Kate Cheney
Comment 6
2020-02-19 12:02:36 PST
Created
attachment 391187
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2020-02-19 12:22:06 PST
Comment on
attachment 391187
[details]
Patch for landing Clearing flags on attachment: 391187 Committed
r256934
: <
https://trac.webkit.org/changeset/256934
>
WebKit Commit Bot
Comment 8
2020-02-19 12:22:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug